@@ -9,11 +9,12 @@ CAUTION: The ElasticSearch server will no longer be embedded. Instead an externa
 
 icon:plus[] Core: The OrientDB graph database will be updated to version 3.0
 
-
 [[v0.14.1]]
 == 0.14.1 (TBD)
 
 icon:check[] Core: Fixed a deadlock sitation which could occur when handling more than 20 image resize requests in parallel.
+
+icon:check[] Core: Fixed a bug which caused permission inconsistencies when deleting a group from the system.
 
 [[v0.14.0]]
 == 0.14.0 (16.01.2018)
